# roscon_workshop

./: README.md  custom_task.json  rmf.repos
docs/conference/: conference.md
roscon_demos/: CMakeLists.txt  README.md  package.xml
roscon_demos/config/workshop/: door_adapter_config.yaml  turtlebot_config.yaml
roscon_demos/launch/: ff.launch.xml  workshop.launch.xml
roscon_demos/launch/include/: workshop.rviz
roscon_demos/launch/include/adapters/: tb.launch.xml
roscon_door_adapter/: README.md  package.xml  setup.cfg  setup.py
roscon_door_adapter/config/: sim_config.yaml
roscon_door_adapter/launch/: door_adapter.launch.xml
roscon_door_adapter/roscon_door_adapter/: DoorAPI.py  __init__.py  door_adapter.py  door_manager.py
roscon_fleet_adapter/: README.md  package.xml  setup.cfg  setup.py
roscon_fleet_adapter/launch/: fleet_adapter.launch.xml
roscon_fleet_adapter/roscon_fleet_adapter/: configuration.py  fleet_adapter.py
roscon_gz/: CMakeLists.txt  README.md  package.xml
roscon_gz/launch/: simulation.launch.xml  workshop.launch.xml
roscon_gz_classic/: CMakeLists.txt  README.md  package.xml
roscon_gz_classic/launch/: simulation.launch.xml  workshop.launch.xml
roscon_lift_adapter/: package.xml  setup.cfg  setup.py
roscon_lift_adapter/config/: sim_config.yaml
roscon_lift_adapter/launch/: lift_adapter.launch.xml
roscon_lift_adapter/roscon_lift_adapter/: LiftAPI.py  __init__.py  lift_adapter.py  lift_manager.py  roscon_lift_adapter.py  simulated_lift.py
roscon_maps/: CMakeLists.txt  README.md  package.xml
roscon_maps/maps/conference/: conference.building.yaml
roscon_maps/maps/conference/scans/sim/: conference.yaml
roscon_maps/maps/conference_example/: conference_example.building.yaml
roscon_maps/maps/conference_example/scans/: conference.pgm  conference.yaml
roscon_maps/maps/conference_example/scans/sim/: conference.pgm
roscon_maps/maps/workshop/: workshop.building.yaml  workshop_with_lift.building.yaml
roscon_maps/maps/workshop/scans/: sim_hall.pgm  sim_hall.yaml
roscon_maps/maps/workshop_b2/: workshop_b2.building.yaml
roscon_maps/maps/workshop_example/: workshop_example.building.yaml
