<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roscon_demos</name>
  <version>1.0.0</version>
  <description>Common launch files for roscon workshop demos</description>
  <maintainer email="luca@openrobotics.org">Luca Della Vedova</maintainer>
  <maintainer email="yadunund@openrobotics.org">Yadunund</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rmf_demos</exec_depend>
  <exec_depend>roscon_door_adapter</exec_depend>
  <exec_depend>roscon_lift_adapter</exec_depend>
  <exec_depend>roscon_maps</exec_depend>

  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>turtlebot3_models</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
