<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roscon_gz_classic</name>
  <version>1.4.0</version>
  <description>Launch files for RMF demos using the Gazebo-classic simulator</description>
  <maintainer email="luca@openrobotics.org">Luca Della Vedova</maintainer>
  <maintainer email="yadunund@openrobotics.org">Yadunund</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>roscon_demos</exec_depend>
  <exec_depend>rmf_demos_gz_classic</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
