<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roscon_maps</name>
  <version>1.0.0</version>
  <description>A package containing maps for the roscon rmf workshop</description>
  <maintainer email="luca@openrobotics.org">Luca Della Vedova</maintainer>
  <maintainer email="yadunund@openrobotics.org">Yadunund</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rmf_building_map_tools</buildtool_depend>
  <buildtool_depend>ros2run</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
